Fix bounding element logic

--- a/packages/block-editor/src/components/grid-visualizer/style.scss
+++ b/packages/block-editor/src/components/grid-visualizer/style.scss
@@ -31,3 +31,10 @@
 		pointer-events: all !important;
 	}
 }
+
+.block-editor-grid-item-resizer__dummy {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	z-index: -1;
+}
