Add default gap between controls in complementary header

--- a/packages/interface/src/components/complementary-area-header/style.scss
+++ b/packages/interface/src/components/complementary-area-header/style.scss
@@ -18,6 +18,7 @@
 .interface-complementary-area-header {
 	background: $white;
 	padding-right: $grid-unit-15; // Reduced padding to account for close buttons.
+	gap: $grid-unit-10; // Always ensure space between contents and close.
 
 	.interface-complementary-area-header__title {
 		margin: 0;
