--- a/packages/block-library/src/tag-cloud/style.scss
+++ b/packages/block-library/src/tag-cloud/style.scss
@@ -22,18 +22,20 @@
 		margin-left: 5px;
 		text-decoration: none;
 	}
+}
 
-	&.is-style-outline {
-		display: flex;
-		flex-wrap: wrap;
-		gap: 1ch;
-
-		a {
-			border: 1px solid currentColor;
-			font-size: unset !important; // !important Needed to override the inline styles.
-			margin-right: 0;
-			padding: 1ch 2ch;
-			text-decoration: none !important; // !important needed to override generic post content link decoration.
-		}
-	}
+// Zero specificity selectors for block style variations to match global styles specificity.
+:where(.wp-block-tag-cloud.is-style-outline) {
+	display: flex;
+	flex-wrap: wrap;
+	gap: 1ch;
+}
+// The block support related styles below haven't been replicated in the base theme.json
+// as the block doesn't yet adopt them for its inner links.
+:where(.wp-block-tag-cloud.is-style-outline a) {
+	border: 1px solid currentColor;
+	font-size: unset !important; // !important Needed to override the inline styles.
+	margin-right: 0;
+	padding: 1ch 2ch;
+	text-decoration: none !important; // !important needed to override generic post content link decoration.
 }
