--- a/packages/block-editor/src/components/grid-visualizer/style.scss
+++ b/packages/block-editor/src/components/grid-visualizer/style.scss
@@ -14,8 +14,8 @@
 
 .block-editor-grid-visualizer__item {
 	background-color: color-mix(in srgb, currentColor 10%, transparent);
-	outline: 1px solid color-mix(in srgb, currentColor 20%, transparent);
-	border-radius: 2px;
+	outline: $border-width solid color-mix(in srgb, currentColor 20%, transparent);
+	border-radius: $radius-block-ui;
 }
 
 .block-editor-grid-item-resizer {
