--- a/packages/block-editor/src/components/block-tools/style.scss
+++ b/packages/block-editor/src/components/block-tools/style.scss
@@ -47,6 +47,10 @@
 
 	top: calc(50% - #{$button-size-small * 0.5});
 	left: calc(50% - #{$button-size-small * 0.5});
+	.is-pattern-inserter & {
+		top: 50%;
+		left: 50%;
+	}
 }
 
 .block-editor-block-list__block-side-inserter-popover .components-popover__content > div {
@@ -261,4 +265,8 @@
 
 .is-dragging-components-draggable .components-tooltip {
 	display: none;
+}
+
+.block-editor-block-list__insertion-point.is-pattern-inserter .block-editor-button-pattern-inserter__button {
+	pointer-events: all;
 }
